--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   --bg: #f3f5fc;
   --dark-blue: #0a1329;
   --light-blue: #315bc7;
+  --gray: #67697c;
   --font: "Rubik", sans-serif;
 }
 
@@ -10,6 +11,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 .App {
