--- a/src/components/Hero/hero.css
+++ b/src/components/Hero/hero.css
@@ -1,6 +1,6 @@
 .drone__hero {
   width: 100%;
-  height: 550px;
+  height: 650px;
   padding: 3rem;
   display: grid;
   grid-template-columns: 40% 60%;
@@ -31,13 +31,13 @@
 }
 
 .drone__hero-image-container {
-  width: 80%;
+  width: 100%;
   height: 100%;
 }
 
 .drone__hero-image-container img {
-  height: 100%;
-  width: 100%;
+  height: 90%;
+  width: 90%;
   object-fit: contain;
 }
 
@@ -64,15 +64,19 @@
   .drone__hero {
     grid-template-columns: 100%;
     grid-template-rows: 50% 50%;
+    grid-row-gap: 0rem;
     padding: 0rem;
-    height: 100vh;
+    height: 650px;
+    margin-top: 2rem;
   }
 
   .drone__hero-text {
     order: 2;
     padding: 1rem;
-    height: 100%;
+    height: auto;
     margin-top: 0;
+    margin-bottom: 0;
+    justify-content: center;
   }
 
   .drone__hero h5 {
@@ -98,8 +102,11 @@
   }
 
   .drone__hero-image-container img {
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: 90%;
     object-fit: contain;
   }
+}
+
+@media screen and (max-width: 520px) {
 }
